--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         data-width="100%"
       >
         <!-- <a href="https://tenor.com/view/manja-gif-22885016">Manja Sticker</a -->
-        >from
+
         <!-- <a href="https://tenor.com/search/manja-stickers">Manja Stickers</a> -->
       </div>
       <script
@@ -25,7 +25,8 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Do you love me? 🤗</h1>
+      <h1>&emsp;&emsp;Do you like me? 🤗</h1>
+      <h6>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;---Mansi Madamji</h6>
       <!-- <div>
         <ul>
           <li> I found the reason for my smile the day I found you. Will you let me be the reason for your smile? Will you be my forever? <br> 
