--- a/yes.html
+++ b/yes.html
@@ -26,7 +26,8 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Hehehehe, I knew it! 😘</h1>
+      <h1>Hehehehe, I knew it! kaddu.... 😘</h1>
+      <img src ="WhatsApp Image 2024-07-05 at 23.00.24_e4c33f3b.jpg" height="251px" width="150px">
     </div>
   </body>
 </html>
